# my-apple

./: ReadMe.md  pyproject.toml
apple/: answers.py
data/: high-volume.csv  low-volume.csv  weekly-aggregation.csv
test/: test_answers.py  test_data.py
