[tool.poetry]
name = "apple"
version = "0.1.0"
description = ""
authors = ["Steve Gon <7094501+stevegon3@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pytest = "^8.2.2"
plotly = "^5.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = ">=8.2.2"